# bolo

./: .gitignore  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LESSONS.md  LICENSE  PLAN.md  PROPOSAL.md  README.md  SECURITY.md  accessibility_context.py  accessibility_trusted.py  audio_devices.py  bolo.py  bolo.spec  commands.py  config.py  corrections.py  ensure-python-env.sh  entitlements.plist  eval_dictation.py  eval_phrases.json  helper-requirements.txt  hotkey.py  insert_text.py  inserter.py  install.sh  onboarding.py  overlay.py  overlay_controller.py  requirements.txt  restart.sh  session_store.py  settings.py  setup.py  setup_cli.py  start-bolo.command  start-bolo.sh  stt.py  (+6 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DESIGN_SYSTEM.md  index.html  site.js  styles.css
src/: main.rs  recording_fsm.rs
tests/: test_accessibility_context.py  test_commands.py  test_inserter.py  test_onboarding.py  test_onboarding_scripts.py  test_transcriber.py
