[package]
name = "bolo"
version = "1.5.0"
edition = "2024"
rust-version = "1.88"
description = "Push-to-talk macOS dictation powered by Telnyx AI"
license = "MIT"
repository = "https://github.com/a692570/bolo"
readme = "README.md"
keywords = ["dictation", "speech-to-text", "macos", "telnyx"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
arboard = "3.6.1"
cpal = "0.17.3"
futures-util = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.35.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tray-icon = "0.23.1"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"
unreachable_pub = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
dead_code = "deny"
elided_lifetimes_in_paths = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore_drop = "deny"
meta_variable_misuse = "deny"
non_ascii_idents = "deny"
noop_method_call = "deny"
single_use_lifetimes = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_lifetimes = "deny"
variant_size_differences = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"
dbg_macro = "deny"
decimal_literal_representation = "deny"
exit = "deny"
expect_used = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
missing_enforced_import_renames = "deny"
multiple_inherent_impl = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
shadow_unrelated = "warn"
string_add = "deny"
implicit_clone = "deny"
todo = "deny"
unimplemented = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

[lints]
workspace = true
